--- a/BoardWeb/src/main/webapp/WEB-INF/web.xml
+++ b/BoardWeb/src/main/webapp/WEB-INF/web.xml
@@ -26,10 +26,21 @@
 		<param-value>/WEB-INF/config/presentation-layer.xml</param-value>
 	</init-param>
 </servlet>
-<!-- <servlet-class>com.globalin.view.controller.DispatcherServlet</servlet-class> -->
+<servlet-class>com.globalin.view.controller.DispatcherServlet</servlet-class> 
 <servlet-mapping>
 	<servlet-name>action</servlet-name>
 	<url-pattern>*.do</url-pattern>
 </servlet-mapping>
+
+<!-- needed for ContextLoaderListener -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:applicationContext.xml</param-value>
+	</context-param>
+
+	<!-- Bootstraps the root web application context before servlet initialization -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 
 </web-app>
